# vitaura

./: README.md  app.py  database.py  llmtest.py  main.py  pyproject.toml  requirements.txt  testmodel.py
admin/src/: App.jsx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  Signup.jsx
templates/: test.html
